--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/server.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon ./dist/server.js"
+    "nodemon": "nodemon ./dist/server.js"    
   },
   "keywords": [],
   "author": "",
