--- a/.github/workflows/master_roommate-backend.yml
+++ b/.github/workflows/master_roommate-backend.yml
@@ -21,16 +21,18 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
+        run: zip -r deployment.zip .
+        working-directory: dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: dist/deployment.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,6 +46,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          path: dist
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -52,4 +55,4 @@ jobs:
           app-name: 'roommate-backend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3EB7670AED244DF5B312F428EAFDFCB9 }}
-          package: .
+          package: dist/deployment.zip
