--- a/.github/workflows/master_roommate-backend.yml
+++ b/.github/workflows/master_roommate-backend.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - roommate-backend
 
 on:
@@ -19,13 +16,13 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '18.x'
+          node-version: '14.x'
 
       - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-        run: zip -r deployment.zip .
+          zip -r deployment.zip .
         working-directory: dist
 
       - name: Upload artifact for deployment job
