--- a/.github/workflows/master_roommate-backend.yml
+++ b/.github/workflows/master_roommate-backend.yml
@@ -22,14 +22,15 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          zip -r deployment.zip .
-        working-directory: dist
+
+      - name: zip deployment
+        run: zip -r deployment.zip dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: dist/deployment.zip
+          path: deployment.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -43,7 +44,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
-          path: dist
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -52,4 +52,4 @@ jobs:
           app-name: 'roommate-backend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3EB7670AED244DF5B312F428EAFDFCB9 }}
-          package: dist/deployment.zip
+          package: deployment.zip
