--- a/.github/workflows/master_roommate-hub.yml
+++ b/.github/workflows/master_roommate-hub.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - roommate-hub
 
 on:
@@ -27,11 +24,14 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Create zip artifact
+        run: zip -r node-app.zip .
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: node-app.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +53,4 @@ jobs:
           app-name: 'roommate-hub'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BB8D87A9669C4953A004B8765A5B1FAB }}
-          package: .
+          package: ${{ github.workspace }}/node-app.zip
