--- a/.github/workflows/master_roommate-hub.yml
+++ b/.github/workflows/master_roommate-hub.yml
@@ -24,6 +24,9 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Remove node_modules directory
+        run: rm -rf node_modules
+
       - name: Create zip artifact
         run: zip -r node-app.zip .
 
