--- a/.github/workflows/master_roommate-hub.yml
+++ b/.github/workflows/master_roommate-hub.yml
@@ -24,11 +24,8 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Remove node_modules directory
-        run: rm -rf node_modules
-
       - name: Create zip artifact
-        run: zip -r node-app.zip .
+        run: zip -r node-app.zip dist
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
