--- a/.github/workflows/master_roommate-hub-backend.yml
+++ b/.github/workflows/master_roommate-hub-backend.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - roommate-hub-backend
 
 on:
@@ -27,6 +24,9 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
+      - name: Delete node_modules directory
+        run: rm -rf node_modules
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
@@ -45,6 +45,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+
+      - name: Delete node_modules directory
+        run: rm -rf node_modules
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
